# mcp-serial-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TASKS.md  cliff.toml  deny.toml  devices.toml.example
.github/workflows/: ci.yml  dependency-security.yml  release.yml
docs/: RELEASE.md  mcp-conformance-findings.md  mcp-serial-architecture.md  rmcp-migration-spec.md
docs/adr/: 0001-tool-errors-vs-json-rpc-errors.md  0002-atomic-exec-and-raw-output.md  0003-session-ids-and-audit-journal.md  0004-defer-optional-mcp-features.md  0005-session-write-policy.md  0006-console-execution-profiles.md  0007-server-owned-command-policy.md
src/: config.rs  errors.rs  lib.rs  main.rs  protocol.rs  tools.rs
src/mcp/: journal.rs  mod.rs
src/serial/: console.rs  journal.rs  manager.rs  mod.rs  parser.rs  policy.rs  session.rs
tests/: loopback.rs  mcp_tests.rs  parser_tests.rs  protocol_tests.rs  session_tests.rs
