[package]
name = "mcp-serial-rs"
version = "0.1.0"
edition = "2021"
# MSRV raised from 1.75 → 1.85 to accept rmcp's edition-2024
# dependency chain (rmcp itself is built with edition 2024 but
# only requires its consumer to use a 1.85+ compiler).
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# rmcp migration (see docs/rmcp-migration-spec.md). Default features
# already include `macros` (for #[tool], #[tool_router], #[tool_handler])
# and `server`; we additionally enable `transport-io` for the stdio
# transport. Hand-rolled protocol.rs stays in place until rmcp parity
# tests pass (spec §Migration Sequence step 14).
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = "1.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1"
tempfile = "3"
