[package]
name = "mcp-serial-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server exposing serial-port access (open/read/write/exec/close) over stdio, with per-port async sessions."
repository = "https://github.com/umair-as/mcp-serial-rs"
readme = "README.md"
# MSRV raised from 1.75 → 1.85 to accept rmcp's edition-2024
# dependency chain (rmcp itself is built with edition 2024 but
# only requires its consumer to use a 1.85+ compiler).
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
getrandom = "0.3"
tokio-util = "0.7"
libc = "0.2"
# MCP protocol layer. Default features already include `macros` (for
# #[tool], #[tool_router], #[tool_handler]) and `server`; we additionally
# enable `transport-io` for the stdio transport.
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = "1.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1"
tempfile = "3"
jsonschema = { version = "0.33", default-features = false }
